# cs100-spring24-group-project

./: CMakeLists.txt  README.md
header/: Playlist.cpp  Playlist.hpp  Reccomendations.hpp  Recommendations.hpp  Song.hpp  User.hpp
src/: Playlist.cpp  Recommendations.cpp  User.cpp  main.cpp
test/: notes.txt  test.cpp
